# rag-assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/rag_papers/: __main__.py  answering.py  chunking.py  cli.py  embeddings.py  pdf_loader.py  vector_store.py
src/rag_papers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
