[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-papers"
version = "0.1.0"
description = "RAG Research Paper Assistant (PDF RAG + citations)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pymupdf==1.24.10",
  "sentence-transformers==3.0.1",
  "chromadb==0.5.5",
  "numpy==1.26.4",
  "tqdm==4.66.5",
  "python-dotenv==1.0.1",
  "ruff==0.6.3",
  "pytest==8.3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
